--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>This is for Practicing Purpose of Git Concepts</h1>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae rerum quibusdam alias itaque, asperiores impedit corrupti fugiat, laudantium quasi officiis, nam aperiam ipsa quo quod eveniet dolore? Iure, minima velit reiciendis pariatur perferendis et similique praesentium laudantium, mollitia voluptates architecto.</p>
 </body>
 </html>
